improve styling, add hacks page, modify homepage a bit

--- a/linkblog/_head.html
+++ b/linkblog/_head.html
@@ -14,5 +14,6 @@
   <body>
     <header>
       <h1>@@TITLE@@</h1>
+      <nav><a href="../index.html">« homepage</a></nav>
     </header>
     <section id="content">
